; ModuleID = '/home/carl/AnghaBench/openssl/crypto/pem/extr_pvkfmt.c_write_dsa.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/pem/extr_pvkfmt.c_write_dsa.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8**, i32*, i32)* @write_dsa to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @write_dsa(i8** %0, i32* %1, i32 %2) #0 {
  %4 = alloca i8**, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32*, align 8
  store i8** %0, i8*** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32 %2, i32* %6, align 4
  store i32* null, i32** %8, align 8
  store i32* null, i32** %9, align 8
  store i32* null, i32** %10, align 8
  store i32* null, i32** %11, align 8
  store i32* null, i32** %12, align 8
  %13 = load i32*, i32** %5, align 8
  %14 = call i32 @DSA_get0_pqg(i32* %13, i32** %8, i32** %9, i32** %10)
  %15 = load i32*, i32** %5, align 8
  %16 = call i32 @DSA_get0_key(i32* %15, i32** %11, i32** %12)
  %17 = load i32*, i32** %8, align 8
  %18 = call i32 @BN_num_bytes(i32* %17)
  store i32 %18, i32* %7, align 4
  %19 = load i8**, i8*** %4, align 8
  %20 = load i32*, i32** %8, align 8
  %21 = load i32, i32* %7, align 4
  %22 = call i32 @write_lebn(i8** %19, i32* %20, i32 %21)
  %23 = load i8**, i8*** %4, align 8
  %24 = load i32*, i32** %9, align 8
  %25 = call i32 @write_lebn(i8** %23, i32* %24, i32 20)
  %26 = load i8**, i8*** %4, align 8
  %27 = load i32*, i32** %10, align 8
  %28 = load i32, i32* %7, align 4
  %29 = call i32 @write_lebn(i8** %26, i32* %27, i32 %28)
  %30 = load i32, i32* %6, align 4
  %31 = icmp ne i32 %30, 0
  br i1 %31, label %32, label %37

32:                                               ; preds = %3
  %33 = load i8**, i8*** %4, align 8
  %34 = load i32*, i32** %11, align 8
  %35 = load i32, i32* %7, align 4
  %36 = call i32 @write_lebn(i8** %33, i32* %34, i32 %35)
  br label %41

37:                                               ; preds = %3
  %38 = load i8**, i8*** %4, align 8
  %39 = load i32*, i32** %12, align 8
  %40 = call i32 @write_lebn(i8** %38, i32* %39, i32 20)
  br label %41

41:                                               ; preds = %37, %32
  %42 = load i8**, i8*** %4, align 8
  %43 = load i8*, i8** %42, align 8
  %44 = call i32 @memset(i8* %43, i32 255, i32 24)
  %45 = load i8**, i8*** %4, align 8
  %46 = load i8*, i8** %45, align 8
  %47 = getelementptr inbounds i8, i8* %46, i64 24
  store i8* %47, i8** %45, align 8
  ret void
}

declare dso_local i32 @DSA_get0_pqg(i32*, i32**, i32**, i32**) #1

declare dso_local i32 @DSA_get0_key(i32*, i32**, i32**) #1

declare dso_local i32 @BN_num_bytes(i32*) #1

declare dso_local i32 @write_lebn(i8**, i32*, i32) #1

declare dso_local i32 @memset(i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
